[package]
name = "async-scoped-local"
version = "0.1.0"
authors = ["Rajsekar Manokaran <rajsekar@gmail.com>", "Danilo Spinella <oss@danyspin97.org>"]
edition = "2021"

documentation = "https://docs.rs/async-scoped-local"
description = "Spawn scoped (non 'static) and local asynchronous futures for async_std and tokio runtimes"
homepage = "https://github.com/danyspin97/async-scoped-local"
repository = "https://github.com/danyspin97/async-scoped-local"
readme = "README.md"

categories = [ "asynchronous", "concurrency" ]
keywords = [ "async", "async-std", "tokio", "scoped", "spawn" ]
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0"
slab = "0.4.2"
async-std = { version = "1.6.3", optional = true }
futures = "0.3.15"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync"], optional = true}

[features]
# Verify package.metadata.docs.rs when updating
use-async-std = ["async-std"]
use-tokio = ["tokio"]


[dev-dependencies]
femme = "1.3.0"
log = { version = "0.4.8", features = ["kv_unstable"] }
async-std = { version = "1.6.3", features = ["attributes"] }

[package.metadata.docs.rs]
features = ["use-async-std", "use-tokio"]
